# OpenCVlearning

./: CMakeLists.txt  Main.cpp  Main.py  README.md
